@@ -10,3 +10,10 @@ USE_RUBY="ruby18"
 DEPEND="dev-libs/atk"
 RDEPEND="${DEPEND}
 	>=dev-ruby/ruby-glib2-${PV}"
+
+# Hotfix for ruby19 as default symlink
+src_compile() {
+	ruby() { /usr/bin/ruby18 "$@" ; }
+
+	ruby-gnome2_src_compile
+}
